--- a/_data/asia-fleischmarinade.yml
+++ b/_data/asia-fleischmarinade.yml
@@ -2,6 +2,61 @@ portionen: Reicht für ca. 1kg Fleisch
 gesamtzeitaufwand: Mindestens 30 Minuten
 zeitaufwandzubereitung: Mindestens 30 Minuten
 
+einleitungstext: '    Die asiatische Küche ist weltweit bekannt für ihre aromatischen und exotischen Geschmacksrichtungen. Wenn Sie auf der Suche nach einem einfachen und leckeren Rezept sind, das Sie zu Hause ausprobieren können, dann sollten Sie unbedingt
+    diese Asia-Fleischmarinade ausprobieren. Diese Marinade verleiht dem Fleisch einen einzigartigen Geschmack, der perfekt zu asiatischen Gerichten passt.
+
+    <br />
+    <br />
+
+    Die Zutatenliste ist kurz und einfach zu finden. Sie benötigen lediglich Sojasauce, Reiswein, Wasser, Knoblauchgranulat, Ingwerpulver und Maisstärke. Diese Zutaten sind in den meisten Supermärkten erhältlich und sind oft auch preiswert.
+    Die Kombination aus Sojasauce und Reiswein verleiht der Marinade einen kräftigen und würzigen Geschmack, während der Knoblauch und Ingwer einen Hauch von Schärfe hinzufügen. Die Maisstärke dient als Bindemittel und sorgt dafür, dass die
+    Marinade am Fleisch haftet.
+
+    <br />
+    <br />
+
+    Um die Marinade zuzubereiten, müssen Sie lediglich alle Zutaten vermengen und das Fleisch darin für mindestens 30 Minuten im Kühlschrank einweichen lassen. Sie können jedes Fleisch Ihrer Wahl verwenden, ob es nun Hühnchen,
+    Schweinefleisch oder Rindfleisch ist. Nachdem das Fleisch mariniert wurde, können Sie es auf verschiedene Arten zubereiten, wie zum Beispiel braten, grillen oder sogar als Basis für Wok-Gerichte verwenden. Probieren Sie es aus und
+    genießen Sie den Geschmack Asiens in Ihrem eigenen Zuhause!'
+zutatentext: '            Die Zutaten in einem Rezept sind entscheidend für den Geschmack und das Aroma des Gerichts. Deshalb ist es wichtig, die richtigen Zutaten auszuwählen und zu verwenden. In diesem Artikel werfen wir einen genaueren Blick auf die
+            Zutatenliste der Asia-Fleischmarinade und erklären, warum jede Zutat so wichtig ist.
+
+            <br />
+            <br />
+
+            Die erste Zutat in der Marinade ist Sojasauce. Diese würzige Sauce ist ein wichtiger Bestandteil der asiatischen Küche und verleiht der Marinade einen kräftigen und salzigen Geschmack. Sojasauce ist auch eine gute Quelle für
+            Protein und enthält wichtige Aminosäuren.
+
+            <br />
+            <br />
+
+            Der Reiswein in der Marinade ist ein süßer, milder Wein, der aus fermentiertem Reis hergestellt wird. Reiswein wird in vielen asiatischen Gerichten als Würze verwendet und verleiht der Marinade einen subtilen Geschmack und
+            Aroma.
+
+            <br />
+            <br />
+
+            Wasser ist eine weitere wichtige Zutat in der Marinade. Es verdünnt die Sojasauce und den Reiswein und sorgt dafür, dass die Marinade nicht zu dickflüssig wird. Dadurch kann sie besser in das Fleisch einziehen und das Aroma und
+            den Geschmack des Fleisches verbessern.
+
+            <br />
+            <br />
+
+            Knoblauchgranulat und Ingwerpulver sind zwei Gewürze, die in vielen asiatischen Gerichten häufig verwendet werden. Knoblauch und Ingwer verleihen der Marinade einen einzigartigen Geschmack und ein angenehmes Aroma. Knoblauch ist
+            auch reich an Antioxidantien und hat viele gesundheitliche Vorteile, während Ingwer bekannt für seine entzündungshemmenden Eigenschaften ist.
+
+            <br />
+            <br />
+
+            Zuletzt, aber nicht zuletzt, ist die Maisstärke in der Marinade ein wichtiger Bestandteil, der als Bindemittel dient. Maisstärke verdickt die Marinade und sorgt dafür, dass sie am Fleisch haftet. Dadurch wird sichergestellt,
+            dass die Marinade das Fleisch gleichmäßig umgibt und das Aroma und den Geschmack besser aufnehmen kann.
+
+            <br />
+            <br />
+
+            Insgesamt sind alle Zutaten in der Asia-Fleischmarinade wichtig für den Geschmack und das Aroma des Gerichts. Jede Zutat hat ihre eigene Funktion und trägt dazu bei, dass das Fleisch zart und würzig wird. Wenn Sie asiatische
+            Küche lieben oder einfach nur eine neue Marinade ausprobieren möchten, sollten Sie diese Asia-Fleischmarinade unbedingt ausprobieren.'
+
 zutaten:
  - s: 2 EL Sojasauce
  - s: 2 EL Reiswein
