--- a/_data/chili-con-carne.yml
+++ b/_data/chili-con-carne.yml
@@ -1,5 +1,71 @@
 portionen: 6-8
 
+einleitungstext: '    Chili con Carne ist ein klassisches Gericht aus der mexikanischen K&uuml;che, das auch bei uns sehr beliebt ist. Das Gericht besteht aus einer Mischung aus Hackfleisch, Bohnen, Tomaten und Gew&uuml;rzen, die zusammen zu einer herzhaften
+    und w&uuml;rzigen Sauce gekocht werden. Das Besondere an diesem Rezept ist, dass es mit einem speziellen Chili-Con-Carne-Fix zubereitet wird, der das W&uuml;rzen besonders einfach und schnell macht.<br />
+    <br />
+
+    Um das Chili con Carne zuzubereiten, wird zun&auml;chst das Hackfleisch mit Zwiebeln und Knoblauch angebraten und mit Tomatenmark und dem Chili-Con-Carne-Fix gew&uuml;rzt. Dann kommen Bier, starker Kaffee und gehackte Tomaten dazu, um
+    eine aromatische Sauce zu bilden. Nachdem alles kurz aufgekocht ist, wird das Gericht f&uuml;r anderthalb Stunden bei niedriger Hitze gek&ouml;chelt, um die Aromen zu intensivieren und das Fleisch zart zu machen.<br />
+    <br />
+
+    Am Ende werden die Kidney-Bohnen hinzugef&uuml;gt und das Chili con Carne ohne Deckel weitergekocht, um die Sauce einzudicken und die Bohnen zu erw&auml;rmen. Servieren Sie dieses k&ouml;stliche Gericht mit einem Schuss saurer Sahne und
+    etwas K&auml;se und genie&szlig;en Sie es mit Tortilla-Chips oder Reis. Dieses Rezept ist perfekt f&uuml;r eine gro&szlig;e Familie oder Freunde und ist ein klassisches Gericht, das immer wieder gerne gegessen wird.'
+zutatentext: '            In diesem Chili Con Carne-Rezept werden einige Zutaten verwendet, die dem Gericht seinen einzigartigen Geschmack verleihen. Das Chili-Con-Carne-Fix ist eine Mischung aus Gewürzen, die speziell für dieses Gericht entwickelt wurde
+            und enthält unter anderem Kreuzkümmel, Paprika, Knoblauch und Cayennepfeffer. Das Faschierte wird mit dieser Gewürzmischung angebraten und anschließend mit Tomatenmark, Bier und Kaffee abgelöscht. Die Dosen mit gehackten Tomaten
+            verleihen dem Chili Con Carne eine sämige Konsistenz und runden das Aroma ab.<br />
+            <br />
+
+            Neben den typischen Zutaten für ein Chili Con Carne wie Zwiebeln, Knoblauch und Bohnen, ist der Einsatz von Kaffee eine interessante Variante, die dem Gericht eine besondere Note verleiht. Der Kaffee sollte möglichst stark sein,
+            um dem Chili Con Carne eine leichte Bitternote zu geben. Die Verwendung von Bier in der Sauce verleiht dem Gericht ebenfalls eine besondere Würze und harmoniert perfekt mit den anderen Zutaten.<br />
+            <br />
+
+            Als Topping eignen sich geriebener Käse, saure Sahne und frische Kräuter wie Koriander oder Petersilie. Die Zutaten für dieses Rezept sind leicht zu finden und die meisten davon haben Sie vielleicht sogar bereits in Ihrem
+            Vorratsschrank. Zusammen ergeben sie ein leckeres und würziges Gericht, das sich perfekt für gemütliche Abende mit Freunden oder der Familie eignet.'
+variationentext: '            Es gibt zahlreiche Möglichkeiten, das klassische Chili Con Carne Rezept nach eigenem Geschmack und Vorlieben zu variieren. Hier sind einige Vorschläge:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Vegetarische Version: Das Faschierte durch Sojahack oder gewürfeltes Gemüse wie Karotten, Sellerie und Paprika ersetzen. Auch Tofu oder Pilze eignen sich als Fleischersatz.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Schärfelevel anpassen: Je nach persönlicher Vorliebe kann die Schärfe des Gerichts angepasst werden. Wer es mild mag, kann beispielsweise weniger Chili-Con-Carne-Fix verwenden oder
+            mildere Chilischoten wählen. Für mehr Schärfe einfach mehr Chilischoten oder -pulver hinzufügen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Variationen bei den Bohnen: Neben Kidney-Bohnen können auch schwarze Bohnen oder weiße Bohnen verwendet werden. Wer es besonders abwechslungsreich mag, kann auch verschiedene
+            Bohnensorten miteinander kombinieren.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Fleischvariationen: Statt Rinderhackfleisch kann auch Hackfleisch vom Schwein oder Lamm verwendet werden. Wer es besonders würzig mag, kann auch auf chorizo oder Speck als zusätzliche
+            Zutat zurückgreifen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Gewürze und Kräuter: Auch bei den Gewürzen kann man kreativ werden und je nach Geschmack variieren. Anstelle von Kreuzkümmel kann man auch Curry oder Paprika verwenden. Frische Kräuter
+            wie Koriander, Petersilie oder Basilikum geben dem Chili Con Carne zusätzliches Aroma.<br />
+            <br />
+
+            Mit diesen Variationen kann man das klassische Chili Con Carne Rezept immer wieder neu interpretieren und immer wieder aufs Neue genießen.'
+serviervorschlaegetext: '            Chili Con Carne ist ein wunderbares Gericht, das auf viele verschiedene Arten serviert werden kann. Hier sind einige Ideen, wie Sie das Chili Con Carne aufpeppen und zu einem perfekten Essen machen können.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit Reis servieren: Servieren Sie das Chili Con Carne auf einer Schüssel dampfendem Reis. Dies gibt dem Gericht eine zusätzliche Textur und macht es zu einem noch befriedigenderen
+            Essen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit Guacamole garnieren: Fügen Sie eine großzügige Portion Guacamole auf das Chili Con Carne hinzu, um einen Hauch von Frische und Geschmack zu verleihen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit Tortilla Chips servieren: Einige knusprige Tortilla-Chips auf dem Chili Con Carne verteilt geben dem Gericht eine zusätzliche Knusprigkeit und eine unverwechselbare Textur.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit geriebenem Käse garnieren: Einige geriebene Käse, wie Cheddar oder Parmesan, auf dem Chili Con Carne gestreut, machen das Gericht cremiger und bringen zusätzlichen Geschmack.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit saurer Sahne garnieren: Ein Löffel saurer Sahne auf dem Chili Con Carne gibt dem Gericht einen zusätzlichen Kick und bringt eine angenehme Säurenote.<br />
+            <br />
+
+            Das sind nur einige Ideen, wie Sie das Chili Con Carne aufpeppen und zu einem noch besseren Gericht machen können. Experimentieren Sie mit verschiedenen Zutaten und sehen Sie, was am besten zu Ihrem Geschmack passt. Das Schöne
+            an Chili Con Carne ist, dass es sich perfekt anpassen lässt, um ein ganz individuelles Essen zu kreieren.'
+
 zutaten:
  - s: 1 Glas <a href="/chili-con-carne-fix">Chili-Con-Carne-Fix</a>
  - s: 1kg Faschiertes
