--- a/_data/pizzateig.yml
+++ b/_data/pizzateig.yml
@@ -3,6 +3,36 @@ gesamtzeitaufwand: 18 Stunden, 12 Minuten
 zeitaufwandvorbereitung: 18 Stunden
 zeitaufwandzubereitung: 12 Minuten
 
+einleitungstext: '    Pizza gehört zu den Lieblingsgerichten vieler Menschen und ist eine Speise, die man zu jeder Tageszeit genießen kann. Der Teig ist das Herzstück jeder Pizza, und wer einmal selbstgemachten Pizzateig probiert hat, möchte nie wieder auf
+    Fertigteig zurückgreifen. Das Rezept für einen Pizzateig ohne Kneten ist einfach und unkompliziert, und man benötigt nur wenige Zutaten. Mit einer Vorbereitungszeit von 12-18 Stunden kann man sich am nächsten Tag auf eine köstliche und
+    selbstgemachte Pizza freuen.<br />
+    <br />
+
+    Das Besondere an diesem Pizzateig ist, dass man ihn nicht kneten muss. Dadurch bleibt der Teig besonders luftig und bekommt eine perfekte Konsistenz. Die Zutaten sind einfach zu beschaffen und man benötigt lediglich Mehl, Trockenhefe,
+    Salz, Wasser und Öl. Nachdem man alle Zutaten in eine Schüssel gegeben und verknetet hat, lässt man den Teig für 12-18 Stunden ruhen, damit er genug Zeit hat, um zu gären. Durch die lange Ruhezeit wird der Teig besonders aromatisch und
+    bekommt eine tolle Konsistenz.<br />
+    <br />
+
+    Nachdem der Teig ausgeruht hat, teilt man ihn in drei Teile und knetet sie vorsichtig zu Kugeln. Anschließend lässt man die Teiglinge nochmals 30 Minuten ruhen, bevor man sie ausrollt und mit den gewünschten Zutaten belegt. Die Pizza
+    wird dann bei 220 Grad Umluft für etwa 10 Minuten im Ofen gebacken. Das Ergebnis ist eine köstliche und knusprige Pizza, die man ganz nach Belieben mit verschiedenen Zutaten garnieren kann.'
+zutatentext: '            Die Zutaten sind das Herzstück jedes Rezepts und haben einen großen Einfluss auf den Geschmack und die Konsistenz des Gerichts. Auch bei einem einfachen Rezept wie einem Pizzateig ohne Kneten sind die Zutaten entscheidend für
+            das Endergebnis. In diesem Text werden die einzelnen Zutaten näher betrachtet und ihre Funktion im Teig erläutert.<br />
+            <br />
+
+            Das Mehl bildet die Grundlage des Teigs und ist daher ein wichtiger Bestandteil. Für ein optimales Ergebnis sollte man darauf achten, dass man ein Mehl mit einem hohen Proteingehalt verwendet, da dies zu einer besseren
+            Elastizität des Teigs führt. Das Mehl wird zusammen mit der Trockenhefe und dem Salz in eine Schüssel gegeben und mit dem Wasser und dem Öl zu einem Teig verknetet.<br />
+            <br />
+
+            Die Trockenhefe ist ein Triebmittel und sorgt dafür, dass der Teig aufgeht. Im Gegensatz zur frischen Hefe muss die Trockenhefe nicht aktiviert werden und kann direkt dem Mehl zugegeben werden. Das Salz hat nicht nur einen
+            Einfluss auf den Geschmack, sondern auch auf die Konsistenz des Teigs. Es sorgt dafür, dass der Teig nicht zu weich wird und eine bessere Textur bekommt.<br />
+            <br />
+
+            Das Wasser dient als Bindemittel und ist wichtig für die Konsistenz des Teigs. Es sollte lauwarm sein, da dies den Gärprozess unterstützt. Das Öl gibt dem Teig zusätzliche Feuchtigkeit und sorgt dafür, dass er nicht zu trocken
+            wird. Außerdem verleiht das Öl dem Teig einen besonderen Geschmack.<br />
+            <br />
+
+            Zusammen ergeben diese Zutaten einen Teig, der luftig, aromatisch und knusprig ist. Mit der richtigen Kombination der Zutaten kann man eine perfekte Pizza zaubern, die den Gaumen verwöhnt.'    
+
 zutaten:
  - s: 3.5 Cups (~500g) Mehl
  - s: 1/4 TL Trockenhefe
