--- a/_data/sauce-bolognese.yml
+++ b/_data/sauce-bolognese.yml
@@ -3,6 +3,62 @@ zeitaufwandvorbereitung: 6 Minuten
 zeitaufwandzubereitung: 1 Stunde, 15 Minuten
 gesamtzeitaufwand: 1 Stunde, 21 Minuten
 
+einleitungstext: '    Sauce Bolognese ist ein Klassiker der italienischen Küche und eine beliebte Beilage zu Nudelgerichten. Es gibt zahlreiche Varianten des Rezepts, aber die Grundzutaten bleiben meistens gleich: Faschiertes, Zwiebeln, Tomatenmark und
+    Tomaten. Eine besondere Note bekommt die Sauce durch den Rotwein, der bei diesem Rezept verwendet wird. Das Bolognese-Fix sorgt dafür, dass die Sauce schnell und einfach zubereitet werden kann und trotzdem vollmundig und aromatisch
+    schmeckt.<br />
+    <br />
+    Für die Zubereitung der Sauce Bolognese wird das Faschierte zusammen mit den Zwiebeln angebraten und mit Rotwein abgelöscht. Anschließend werden die geschälten Tomaten und das Tomatenmark hinzugefügt und die Sauce für 20 Minuten
+    geköchelt. Das Bolognese-Fix wird zum Schluss untergerührt, um der Sauce den letzten Schliff zu geben.<br />
+    <br />
+    Serviert wird die Sauce Bolognese im deutschsprachigem Raum zu Spaghetti, aber auch zu anderen Nudelsorten passt sie hervorragend. Ein Hauch geriebener Parmesan rundet den Geschmack perfekt ab und sorgt für ein vollendetes kulinarisches
+    Erlebnis. Mit diesem Rezept können Sie schnell und einfach eine leckere und würzige Sauce Bolognese zaubern, die sowohl Erwachsene als auch Kinder begeistern wird.'
+zutatentext: '            Die Zutaten für eine leckere Sauce Bolognese sind relativ einfach und lassen sich schnell in jedem Supermarkt besorgen. Die Hauptzutat ist das Faschierte, das für die Fleischkomponente der Soße sorgt. Es kann Rinder- oder
+            Schweinefleisch oder eine Mischung aus beiden verwendet werden.<br />
+            <br />
+
+            Zusätzlich wird eine Tube Tomatenmark benötigt, um der Soße eine tiefere rote Farbe zu verleihen und ihren Geschmack zu intensivieren. Zwiebeln sind ein wichtiger Bestandteil der Soße, da sie ihr einen herzhaften Geschmack
+            verleihen. Zwei Dosen geschälte Tomaten und Rotwein sind ebenfalls notwendig, um die Soße zu vervollständigen und ihr eine reichhaltige Konsistenz zu geben.<br />
+            <br />
+
+            Das Rezept empfiehlt die Verwendung von Bolognese-Fix, einem Gewürzmischungspaket, um den Geschmack der Soße zu intensivieren. Schließlich werden die Zutaten mit Spaghetti serviert, um ein vollständiges und leckeres Gericht zu
+            kreieren.'
+variationentext: '            Es gibt zahlreiche Möglichkeiten, das klassische Bolognese-Rezept zu variieren und an den eigenen Geschmack anzupassen. So kann man beispielsweise verschiedene Gemüsesorten wie Karotten, Sellerie oder Paprika hinzufügen, um dem
+            Gericht mehr Farbe und Geschmack zu verleihen. Auch die Wahl des Fleisches kann variieren: Statt Rinderfaschiertem kann man auch Hackfleisch von Schwein, Lamm oder Huhn verwenden.<br />
+            <br />
+
+            Wer es gerne schärfer mag, kann etwas Chilipulver oder eine frische Chilischote hinzufügen. Auch Gewürze wie Oregano, Thymian oder Kreuzkümmel können dem Gericht eine besondere Note verleihen. Für eine vegetarische Variante kann
+            man das Faschierte durch Sojahack oder Tofu ersetzen und statt des Bolognese-Fixes mehr frische Kräuter und Gewürze verwenden.<br />
+            <br />
+
+            Eine weitere Variationsmöglichkeit besteht darin, verschiedene Nudelsorten zu verwenden. Statt Spaghetti können auch Penne, Tagliatelle oder Fusilli serviert werden. Wer es besonders kalorienarm mag, kann auch zucchini- oder
+            karotten-Nudeln als Basis verwenden. Auch eine Beilage wie Reis oder Kartoffeln passt gut zu einer leckeren Bolognese-Sauce. Lassen Sie Ihrer Kreativität freien Lauf und probieren Sie aus, welche Variationen Ihnen am besten
+            schmecken!'
+serviervorschlaegetext: '            Hier sind einige Serviervorschläge für dein Bolognese-Gericht:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Klassisch mit Spaghetti: Serviere die Bolognese-Sauce mit Spaghetti und Parmesan. Für einen schönen Geschmack und eine tolle Optik kannst du frische Kräuter wie Basilikum oder Oregano
+            darüberstreuen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Überbackene Nudeln: Koche Penne oder Rigatoni al dente und mische sie mit der Bolognese-Sauce. Gib alles in eine Auflaufform, bestreue es mit geriebenem Käse und backe es im Ofen, bis
+            der Käse geschmolzen und goldbraun ist.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Bolognese-Lasagne: Mache eine klassische Lasagne mit Bolognese-Sauce, Bechamelsauce und Lasagne-Blättern. Backe sie im Ofen, bis sie goldbraun und knusprig ist.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Bolognese-Taco: Fülle weiche Tortillas mit Bolognese-Sauce, geriebenem Käse, saurer Sahne und frischen Tomaten. Das ist eine tolle Option für ein schnelles und einfaches Abendessen.
+            <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Bolognese-Burger: Belege einen Burger mit Bolognese-Sauce, sautierten Champignons und Zwiebeln. Serviere ihn mit Pommes Frites oder einem Beilagensalat.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Bolognese-Suppe: Füge deiner Lieblingssuppe einfach eine Portion Bolognese-Sauce hinzu. Das gibt der Suppe einen zusätzlichen Geschmackskick und macht sie noch sättigender.<br />
+            <br />
+
+            Mit diesen Serviervorschlägen wird dein Bolognese-Gericht garantiert zu einem Hit bei deinen Gästen!'
+
 zutaten:
  - s: 500g Faschiertes
  - s: <a href="/bolognese-fix/">Bolognese-Fix</a>
