--- a/_data/sauce-carbonara.yml
+++ b/_data/sauce-carbonara.yml
@@ -3,6 +3,47 @@ gesamtzeitaufwand: 30 Minuten
 zeitaufwandvorbereitung: 15 Minuten
 zeitaufwandzubereitung: 15 Minuten
 
+einleitungstext: 'Die Sauce Carbonara ist ein klassisches italienisches Gericht, das besonders cremig und würzig ist. Mit nur wenigen Zutaten lässt sich diese köstliche Sauce schnell und einfach zubereiten. Der Geschmack des Specks in Kombination mit der
+    Sahne, den Gewürzen und der Zwiebel verleihen der Carbonara-Sauce ihren charakteristischen Geschmack. Serviert wird sie traditionell mit Pasta, aber sie eignet sich auch gut als Dip oder als Beilage zu Fleischgerichten. Hier ist das
+    Rezept für eine leckere Sauce Carbonara, die garantiert jeden Gaumen verwöhnen wird.
+    <br />
+    <br />
+    Für die Zubereitung benötigt man nur wenige Zutaten: Zwiebeln, Speck oder Braunschweiger, Sahne, Eigelb, Gewürze und Öl oder Butter zum Anbraten. Die Zutaten werden in Schüsseln vorbereitet und dann in einer Pfanne zusammengeführt.
+    Dabei werden zuerst die Zwiebeln und der Speck angebraten, bevor die Sahne und das Eigelb hinzugefügt werden. Nachdem alles gut vermischt ist, wird die Sauce mit Salz, Pfeffer, Basilikum und Muskat gewürzt.
+    <br />
+    <br />
+    Die Sauce Carbonara ist eine perfekte Wahl für ein schnelles und einfaches Mittag- oder Abendessen. Mit nur wenigen Handgriffen ist sie zubereitet und lässt sich vielseitig einsetzen. Probieren Sie das Rezept aus und genießen Sie den
+    authentischen Geschmack der italienischen Küche!'
+zutatentext: '            Bei der Zubereitung von Sauce Carbonara kommt es auf die richtige Auswahl und Dosierung der Zutaten an. Hier sind einige wichtige Aspekte zu beachten:
+            <br />
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Zwiebeln: In diesem Rezept sorgen Zwiebeln für die gewünschte Würze. Sie sollten in kleine Würfel geschnitten und goldgelb geröstet werden.
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Speck/Braunschweiger: Für eine authentische Carbonara benötigt man Speck oder Braunschweiger, die in kleine Würfel geschnitten und knusprig angebraten werden sollten.
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Schlagobers: Das Schlagobers bildet die Basis für die cremige Sauce und sollte bei niedriger Hitze mit den anderen Zutaten vermischt werden.
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Eigelb: Eigelb dient als Bindemittel und sorgt dafür, dass die Sauce eine cremige Konsistenz bekommt.
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Gewürze: Basilikum, Salz, Pfeffer und Muskat geben der Sauce Carbonara das gewisse Etwas und sollten mit Bedacht dosiert werden. <br />
+            <br />
+            Wenn Sie diese Aspekte bei der Auswahl und Zubereitung der Zutaten berücksichtigen, steht einem köstlichen Pasta-Erlebnis nichts mehr im Wege.'
+variationentext: '            Die klassische Carbonara-Sauce wird normalerweise mit Speck oder Pancetta zubereitet, aber es gibt viele Varianten, die ohne Fleisch oder mit alternativen Zutaten gemacht werden können. Eine vegetarische Option ist, den Speck
+            durch geräucherte Paprika oder pflanzlichen Speck zu ersetzen. Eine vegane Variante kann mit Soja-Sahne, pflanzlichem Käse und veganem Speck zubereitet werden. Eine andere Variation wäre, die Sauce mit verschiedenen Käsesorten
+            wie Parmesan, Pecorino, oder Gouda zu machen. Man kann auch zusätzliche Zutaten wie Erbsen, Pilze, oder Brokkoli hinzufügen, um der Sauce mehr Geschmack und Textur zu verleihen.
+            <br />
+            <br />
+            Egal welche Variante man wählt, die Sauce Carbonara ist ein klassisches und leckeres Gericht, das sich schnell und einfach zubereiten lässt.'
+serviervorschlaegetext: '            <i class="fa-regular fa-circle-check"></i> Servieren Sie die Sauce Carbonara mit Spaghetti oder einer anderen Pasta Ihrer Wahl. <br />
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Bestreuen Sie die Carbonara mit etwas geriebenem Parmesan oder Pecorino. <br />
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Servieren Sie dazu einen grünen Salat mit einer einfachen Vinaigrette und etwas Brot zum Dippen in die Sauce. <br />
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Verfeinern Sie die Carbonara mit frischen Kräutern wie Basilikum oder Petersilie. <br />
+            <br />
+            <i class="fa-regular fa-circle-check"></i> Genießen Sie die Sauce Carbonara als Hauptgericht oder als Beilage zu Fleisch oder Fisch.'
+
 zutaten:
  - s: 1 Zwiebel
  - s: 300g Speck/Braunschweiger
