--- a/_data/schinkenfleckerl.yml
+++ b/_data/schinkenfleckerl.yml
@@ -3,6 +3,52 @@ zeitaufwandvorbereitung: 12 Minuten
 zeitaufwandzubereitung: 35 Minuten
 gesamtzeitaufwand: 47 Minuten
 
+einleitungstext: '    Schinkenfleckerl ist ein traditionelles österreichisches Gericht, das aus Fleckerlnudeln, Schinken und Käse besteht. Das Gericht ist einfach zuzubereiten und bietet eine wunderbare Möglichkeit, Reste von Schinken und Käse aufzubrauchen.
+    Es ist ein wohlschmeckendes Gericht, das sowohl als Hauptmahlzeit als auch als Beilage serviert werden kann.<br />
+    <br />
+
+    Die Zubereitung von Schinkenfleckerl ist denkbar einfach und erfordert nur wenige Zutaten. Neben Fleckerlnudeln benötigt man Schinken oder Braunschweiger, Zwiebeln, geriebenen Käse und verschiedene Gewürze wie Majoran, Knoblauchpulver
+    und Pfeffer. Die Zutaten werden in einer Pfanne goldbraun geröstet, bevor man die Fleckerl hinzufügt und mit Käse vermengt. Das Ergebnis ist ein cremiges, würziges Gericht, das sich perfekt für ein gemütliches Abendessen zuhause eignet.
+    <br />
+    <br />
+
+    Man kann das Rezept auch nach Belieben variieren, indem man zum Beispiel verschiedene Käsesorten oder zusätzliche Gewürze hinzufügt. Wer es gerne etwas kräftiger mag, kann auch scharfen Paprika oder Chiliflocken hinzufügen. Die
+    Schinkenfleckerl lassen sich auch wunderbar als Beilage zu gebratenem Fleisch oder Gemüse servieren. Probieren Sie dieses leckere Gericht aus und lassen Sie sich von seinem einzigartigen Geschmack begeistern!'
+zutatentext: '            In diesem Rezept für Schinkenfleckerl sind eine Vielzahl von Zutaten erforderlich, um das gewünschte Geschmackserlebnis zu erzielen.<br />
+            <br />
+
+            Es gibt eine perfekte Kombination aus Gewürzen, Käse und Schinken, die den Geschmack jedes Bissen in diesem Gericht ausmachen. Die richtigen Zutaten sind entscheidend, um ein perfektes Ergebnis zu erzielen und den Gaumen zu
+            verwöhnen.'
+variationentext: '            Es gibt viele Möglichkeiten, das Rezept für Schinkenfleckerl zu variieren und an den persönlichen Geschmack anzupassen. Hier sind einige Ideen:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Gemüse hinzufügen: Schinkenfleckerl können durch das Hinzufügen von Gemüse wie Paprika, Zucchini, Karotten oder Erbsen noch nahrhafter und bunter gestaltet werden.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Verschiedene Käsesorten verwenden: Statt Pizzakäse können auch andere Käsesorten wie Gouda, Cheddar oder Parmesan verwendet werden. Jeder Käse bringt seine eigene Geschmacksnote und
+            Textur in das Gericht.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Würzung anpassen: Die Würzung von Schinkenfleckerl kann je nach Vorliebe angepasst werden. Wer es beispielsweise schärfer mag, kann mehr Pfeffer oder sogar Chilipulver hinzufügen. Für
+            einen frischeren Geschmack kann man auch frische Kräuter wie Basilikum oder Oregano statt getrockneter Petersilie verwenden.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Andere Fleischsorten verwenden: Statt Schinken oder Braunschweiger kann auch Hackfleisch oder Hühnchen verwendet werden. Diese Variationen bringen zusätzliche Proteinquellen in das
+            Gericht und verleihen ihm eine andere Textur.<br />
+            <br />
+
+            Mit diesen Variationen können Schinkenfleckerl zu einem vielseitigen Gericht werden, das immer wieder neu interpretiert werden kann.'
+serviervorschlaegetext: '            <i class="fa-regular fa-circle-check"></i> Für ein gelungenes Servieren der Schinkenfleckerl empfiehlt es sich, diese mit einem frischen Salat als Beilage zu servieren. Auch eine Tomatensoße oder ein Dip aus saurer Sahne und
+            Kräutern kann als Begleitung dienen. Wer es gerne etwas deftiger mag, kann zusätzlich noch knusprig gebratene Speckwürfel über die Schinkenfleckerl streuen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Ein weiterer Serviervorschlag wäre, die Schinkenfleckerl in einer feuerfesten Form zu schichten und mit geriebenem Käse zu überbacken. Dazu einfach die Schinkenfleckerl in eine
+            Auflaufform geben, mit geriebenem Käse bestreuen und im vorgeheizten Backofen bei 200°C Ober-/Unterhitze für ca. 10 Minuten überbacken.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Zu guter Letzt kann man die Schinkenfleckerl auch als Hauptgericht oder Beilage zu verschiedenen Fleisch- oder Gemüsegerichten servieren. Besonders gut passt dazu beispielsweise
+            gebratenes Hühnchen oder gedünstetes Gemüse.'
+
 zutaten:
  - s: 100g Pizzakäse
  - s: 1 Zwiebel
