--- a/_data/serbisches-reisfleisch.yml
+++ b/_data/serbisches-reisfleisch.yml
@@ -1,5 +1,83 @@
 portionen: 5
 
+einleitungstext: '    Serbisches Reisfleisch ist ein herzhaftes und k&ouml;stliches Gericht, das seinen Ursprung in der Balkanregion hat. Es ist ein traditionelles Rezept, das &uuml;ber Generationen weitergegeben wurde und heute in vielen Haushalten in
+    Serbien und anderen Balkanl&auml;ndern immer noch sehr beliebt ist. Das Gericht besteht aus saftigem Schweinefleisch, Paprika, Tomaten und Gew&uuml;rzen, die mit Reis gekocht werden. Es ist einfach zuzubereiten und perfekt f&uuml;r ein
+    Abendessen mit Familie oder Freunden.<br />
+    <br />
+
+    Die Zutaten f&uuml;r serbisches Reisfleisch sind einfach und leicht zu finden. Schweinefleisch wird in Streifen geschnitten und mit Zwiebeln, Knoblauch und Paprika in &Ouml;l gebraten. Tomatenmark, Gew&uuml;rze und Rindsuppenw&uuml;rfel
+    werden hinzugef&uuml;gt, um einen w&uuml;rzigen Geschmack zu kreieren, w&auml;hrend der Langkornreis das Gericht komplett macht. Die Kombination dieser Zutaten gibt dem Reisfleisch einen einzigartigen Geschmack und eine
+    wundersch&ouml;ne Farbe.<br />
+    <br />
+
+    Dieses Rezept ist auch sehr flexibel und kann leicht an den pers&ouml;nlichen Geschmack angepasst werden. Wenn man es sch&auml;rfer mag, kann man einfach mehr Chili hinzuf&uuml;gen. Wer es milder mag, kann die Menge an Paprikapulver
+    reduzieren. Au&szlig;erdem kann man das Rezept leicht f&uuml;r eine gr&ouml;&szlig;ere Gruppe verdoppeln oder halbieren, je nach Bedarf. Wenn man also auf der Suche nach einem einfachen, aber k&ouml;stlichen Rezept f&uuml;r das
+    n&auml;chste Abendessen ist, dann ist serbisches Reisfleisch eine ausgezeichnete Wahl.'
+zutatentext: '            Die Zutaten in diesem Rezept für Serbisches Reisfleisch spielen eine wichtige Rolle in Bezug auf Geschmack, Textur und Nährwert. Hier sind einige Informationen über die Hauptzutaten:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Schweinefleisch: Schweinefleisch ist eine beliebte Fleischsorte in vielen Ländern und wird oft für Eintöpfe und Schmorgerichte verwendet. Es enthält viel Protein und Nährstoffe wie
+            Vitamin B12, Zink und Eisen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Rindsuppenwürfel: Rindsuppenwürfel sind eine praktische Möglichkeit, um einer Mahlzeit schnell und einfach einen kräftigen Geschmack zu verleihen. Sie bestehen aus Rindfleisch, Gewürzen
+            und Salz und enthalten oft auch Geschmacksverstärker.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Paprikaschoten: Paprikaschoten sind ein wichtiger Bestandteil vieler serbischer Gerichte. Sie sind reich an Vitamin C, Ballaststoffen und Antioxidantien. In diesem Rezept sorgen sie für
+            Farbe und Geschmack.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Langkornreis: Langkornreis ist eine der am häufigsten verwendeten Reissorten. Er hat eine längliche Form und bleibt beim Kochen fest. Er ist reich an Kohlenhydraten und enthält auch
+            einige Nährstoffe wie B-Vitamine.<br />
+            <br />
+
+            Durch das Verständnis der Zutaten können Sie auch einige Varianten ausprobieren, um das Rezept an Ihren Geschmack anzupassen oder es nahrhafter zu gestalten. Probieren Sie zum Beispiel, das Schweinefleisch durch Hähnchen oder
+            Rindfleisch zu ersetzen oder fügen Sie weitere Gemüse hinzu, wie zum Beispiel Karotten oder Zucchini. Sie können auch versuchen, den Langkornreis durch Basmati-Reis oder Quinoa zu ersetzen, um eine zusätzliche Textur und
+            Nährstoffe zu erhalten.'
+variationentext: '            Wer gerne experimentiert und seinen kulinarischen Horizont erweitern möchte, kann das serbische Reisfleisch mit einigen Variationen verfeinern.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine Möglichkeit ist, anstelle von Schweinefleisch Hühnerfleisch zu verwenden. Dadurch wird das Gericht etwas leichter und bekömmlicher. Alternativ kann man auch Rindfleisch verwenden,
+            was dem Gericht einen kräftigeren Geschmack verleiht.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine weitere Variante besteht darin, dem Reis während des Kochens einige Gewürze hinzuzufügen. Zum Beispiel kann man dem Reis eine Prise Safran beigeben, um ihm eine schöne gelbe Farbe
+            zu verleihen und ihm ein besonderes Aroma zu geben. Auch Kreuzkümmel oder Currypulver eignen sich gut, um dem Gericht eine individuelle Note zu verleihen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Um das Gericht etwas frischer und knackiger zu gestalten, kann man auch einige Gemüsesorten hinzufügen. Dazu eignen sich zum Beispiel Zucchini, Auberginen, Karotten oder Mais. Man kann
+            diese Gemüsesorten einfach in kleine Würfel schneiden und zusammen mit den Paprikawürfeln dem Gericht hinzufügen.<br />
+            <br />
+
+            Mit diesen und vielen anderen Variationen kann man das serbische Reisfleisch immer wieder neu interpretieren und auf seine persönlichen Geschmackspräferenzen abstimmen. Lassen Sie Ihrer Kreativität freien Lauf und genießen Sie
+            ein leckeres und individuelles Gericht.'
+serviervorschlaegetext: '            Serbisches Reisfleisch ist ein köstliches und herzhaftes Gericht, das sowohl als Hauptgericht als auch als Beilage serviert werden kann. Hier sind einige Vorschläge, wie Sie dieses Gericht servieren können:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit einem einfachen grünen Salat: Eine großzügige Portion serbisches Reisfleisch auf einem Teller mit einem frischen grünen Salat anrichten. Sie können den Salat mit einer einfachen
+            Vinaigrette oder einem Zitronen-Olivenöl-Dressing beträufeln.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit geröstetem Gemüse: Das serbische Reisfleisch passt hervorragend zu geröstetem Gemüse wie Zucchini, Auberginen oder Paprika. Sie können das Gemüse im Ofen bei 200 Grad Celsius rösten
+            und dann mit etwas Olivenöl, Salz und Pfeffer würzen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit gebratenem Fleisch: Wenn Sie möchten, können Sie auch etwas zusätzliches Fleisch wie gegrilltes Hähnchen oder Rindfleisch servieren, um das Gericht noch herzhafter zu machen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit sauren Gurken: Einige saure Gurken auf dem Teller serviert, bringen eine erfrischende Säure in das Gericht.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit frischem Brot: Ein frisches, knuspriges Brot ist die perfekte Ergänzung zu diesem Gericht, um die leckere Soße aufzusaugen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Mit Schafskäse: Um dem Gericht eine zusätzliche Geschmacksnote zu verleihen, können Sie etwas zerbröselten Schafskäse über das serbische Reisfleisch streuen.<br />
+            <br />
+
+            Diese Serviervorschläge sind nur eine Auswahl dessen, was Sie mit diesem vielseitigen Gericht machen können. Experimentieren Sie ein wenig und probieren Sie verschiedene Kombinationen aus, um das perfekte Gericht für Ihre
+            Bedürfnisse zu finden.'
+
 zutaten:
  - s: 500g Schweinefleisch (Schweinsschnitzel)
  - s: 2 Rindsuppenwürfel
