--- a/_data/baguette.yml
+++ b/_data/baguette.yml
@@ -1,5 +1,34 @@
 portionen: 3 Baguettes
 
+einleitungstext: '    Baguette ist eines der bekanntesten französischen Gebäcke und wird auf der ganzen Welt gerne gegessen. Mit diesem Rezept für Crosses Baguette können Sie dieses leckere Gebäck ganz einfach zuhause zubereiten. Das Baguette wird durch die
+    Schnitte auf der Oberfläche besonders knusprig und bekommt eine schöne Optik. <br />
+    <br />
+
+    Die Zubereitung des Crosses Baguette ist relativ einfach und erfordert nur wenige Zutaten. Die Kombination aus Mehl, Wasser, Öl, Zucker und Salz ergibt einen leckeren Teig, der nach einer kurzen Ruhezeit und etwas Formen zu einem
+    herrlichen Baguette gebacken werden kann. Der Teig wird zunächst mit Wasser, Zucker und Trockenhefe vorbereitet und dann mit Mehl und Öl zu einem glatten Teig verknetet. Nachdem er 45 Minuten geruht hat, wird er in 3 Teile geteilt und
+    zu Baguettes geformt. <br />
+    <br />
+
+    Die fertigen Baguettes werden auf ein Backblech gelegt und mit Wasser bestrichen und mit etwas Mehl bestreut. Dann werden sie bei 180 Grad Ober-/Unterhitze im Ofen gebacken, bis sie goldbraun und knusprig sind. Mit diesem einfachen
+    Rezept können Sie frisches und leckeres Crosses Baguette zuhause genießen, das perfekt zu jeder Mahlzeit oder als Snack passt. Probieren Sie es aus und beeindrucken Sie Ihre Gäste mit selbstgebackenem Baguette!'
+zutatentext: '            In diesem Rezept für Crosses Baguette spielen die Zutaten eine entscheidende Rolle für das Gelingen des Gebäcks. Jeder Bestandteil des Teigs trägt zur Geschmacksbildung, Struktur und Haltbarkeit des Baguettes bei. <br />
+            <br />
+
+            Das wichtigste Element im Teig ist das Mehl, das für die Struktur des Gebäcks verantwortlich ist. In diesem Rezept wird Weizenmehl verwendet, da es eine hohe Elastizität aufweist und die Luft im Teig gut halten kann, was für ein
+            luftiges, weiches Inneres sorgt. <br />
+            <br />
+
+            Das Wasser ist der zweite wichtige Bestandteil des Teigs und spielt eine wesentliche Rolle bei der Bildung des Klebers, der dem Gebäck Struktur und Elastizität verleiht. Auch in diesem Rezept ist das Wasser von entscheidender
+            Bedeutung, denn es muss in der richtigen Menge und Temperatur hinzugefügt werden, um die gewünschte Konsistenz des Teigs zu erreichen. <br />
+            <br />
+
+            Das Öl dient in diesem Rezept als Weichmacher und sorgt für ein zartes und saftiges Inneres des Baguettes. Zucker und Salz verleihen dem Gebäck eine leckere Geschmacksnote und sorgen für eine angenehme Konsistenz. Die
+            Trockenhefe ist für das Aufgehen des Teigs verantwortlich und sorgt für eine lockere, poröse Krume. <br />
+            <br />
+
+            Insgesamt sind die Zutaten in diesem Rezept sorgfältig ausgewählt, um ein perfektes Crosses Baguette zu kreieren. Durch die richtige Dosierung und Kombination der Zutaten entsteht ein Baguette, das außen knusprig und innen weich
+            ist und sich perfekt für jede Mahlzeit eignet.'
+
 zutaten:
  - s: 500g Mehl
  - s: 270ml Wasser
