--- a/_data/gebackene-sesamschenkel.yml
+++ b/_data/gebackene-sesamschenkel.yml
@@ -1,5 +1,64 @@
 portionen: 4
 
+einleitungstext: '    Heute stellen wir Ihnen ein köstliches Rezept vor: Gebackene Sesamschenkel. Dieses Gericht ist einfach zuzubereiten und verleiht dem Hähnchen eine knusprige, goldene Haut, die mit einer würzigen Marinade aus Sojasauce, Limettensaft,
+    Honig und Ingwer aromatisiert wird. Der geröstete Sesam gibt dem Gericht eine zusätzliche Textur und ein nussiges Aroma, das perfekt zum Hühnchen passt. <br />
+    <br />
+
+    Die Marinade verleiht den Schenkeln eine angenehme Schärfe, die perfekt durch die Süße des Honigs ausgeglichen wird. Das Hähnchen wird in der Marinade eingelegt, um sicherzustellen, dass es vollständig durchtränkt und voller Geschmack
+    ist. Die Haut des Hühnchens wird während des Backvorgangs knusprig und braun, während das Fleisch zart und saftig bleibt. Das Gericht eignet sich perfekt als Hauptgericht für ein Abendessen oder als Mittagessen am nächsten Tag. <br />
+    <br />
+
+    Das Gericht ist auch sehr anpassungsfähig. Sie können die Schenkel durch Hähnchenbrust oder -keule ersetzen, je nachdem, was Sie bevorzugen. Sie können auch zusätzliche Gewürze oder Kräuter hinzufügen, um den Geschmack zu variieren. Wie
+    auch immer Sie dieses Gericht zubereiten, Sie werden sicherlich von der Kombination aus knuspriger Haut, zartem Fleisch und würziger Marinade begeistert sein. Also probieren Sie es unbedingt aus! <br />
+    <br />'
+zutatentext: '            Die Zutatenliste für gebackene Sesamschenkel ist relativ kurz, aber dennoch voller Geschmack. Die Kombination aus Sojasauce, Limettensaft, Honig und Ingwer verleiht den Hühnerschenkeln eine einzigartige Würze und ein feines
+            Aroma. <br />
+            <br />
+
+            Sojasauce ist eine vielseitige Zutat, die in vielen asiatischen Gerichten verwendet wird. Sie verleiht dem Hühnchen eine salzige Note und hilft, den Geschmack der Marinade in das Fleisch zu ziehen. Limettensaft bringt eine saure
+            Note in die Marinade, die dem Gericht einen Hauch von Frische verleiht. Honig hingegen fügt eine natürliche Süße hinzu und rundet den Geschmack ab. <br />
+            <br />
+
+            Ingwer ist eine aromatische Wurzel, die oft in asiatischen Gerichten verwendet wird. Es gibt der Marinade einen scharfen und pikanten Geschmack, der das Hühnchen perfekt ergänzt. Schließlich rundet der geröstete Sesam das
+            Gericht mit seiner knusprigen Textur und seinem nussigen Geschmack ab. Zusammen ergeben diese Zutaten eine köstliche Kombination, die jedes Hühnchengericht auf ein neues Niveau hebt. <br />
+            <br />
+
+            Es ist auch erwähnenswert, dass diese Zutaten gesundheitsfördernde Eigenschaften haben. Sojasauce ist reich an Proteinen und hat einen hohen Gehalt an essentiellen Aminosäuren. Ingwer wird für seine entzündungshemmenden
+            Eigenschaften und seine Fähigkeit geschätzt, den Magen zu beruhigen. Zusammen mit dem Hühnchen, das eine hervorragende Proteinquelle darstellt, ergibt sich ein nahrhaftes und leckeres Gericht.'
+variationentext: '            <i class="fa-regular fa-circle-check"></i> Wenn du es gerne scharf magst, kannst du ein paar rote Chiliflocken zur Marinade hinzufügen oder das Gericht mit Sriracha-Sauce servieren. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Anstelle von Hühnerschenkeln kannst du auch Hähnchenbrust verwenden. Schneide sie einfach in dicke Scheiben und achte darauf, dass sie gut durchgegart sind. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Wenn du vegetarisch oder vegan lebst, kannst du auch Tofu anstelle von Hühnchen verwenden. Schneide den Tofu in dicke Scheiben und mariniere ihn für mindestens eine Stunde. Backe ihn
+            dann bei 190 Grad Celsius für 25-30 Minuten, oder bis er goldbraun und knusprig ist. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Für eine glutenfreie Variante des Gerichts, verwende glutenfreie Sojasauce und passe die Menge des Honigs an, um sicherzustellen, dass er auch glutenfrei ist. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Um das Gericht noch nahrhafter zu machen, kannst du es mit verschiedenen Gemüsen servieren, wie z.B. Brokkoli, Paprika oder Karotten. Schneide das Gemüse in mundgerechte Stücke und
+            röste es im Ofen zusammen mit dem Hühnchen. So erhältst du eine komplette Mahlzeit auf einmal.'
+serviervorschlaegetext: '            <i class="fa-regular fa-circle-check"></i> Serviere die Sesamschenkel mit Reis oder Nudeln und einem knackigen Salat. Ein einfacher grüner Salat mit Gurken, Tomaten und einer leichten Vinaigrette ist eine perfekte Ergänzung zu
+            diesem Gericht. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Du könntest das Gericht auch mit gedünstetem Gemüse servieren. Gedämpfter Brokkoli, Zucchini und Paprika passen gut zu den Sesamschenkeln und verleihen der Mahlzeit eine extra Portion
+            Nährstoffe. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Serviere die Sesamschenkel als Fingerfood auf einer Party oder einem Buffet. Schneide die Schenkel einfach in kleine Stücke und stecke sie auf Spieße. Dazu passt eine Dip-Sauce, wie
+            z.B. eine würzige Erdnusssauce. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Für eine asiatische Note könntest du die Sesamschenkel mit gebratenem Reis servieren. Brate dazu gekochten Reis in einer Pfanne an und füge Sojasauce, Sesamöl und Frühlingszwiebeln
+            hinzu. Garniere mit frischem Koriander und einer Scheibe Limette. <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine weitere Möglichkeit ist es, die Sesamschenkel mit gedünstetem Gemüse und einer cremigen Sauce zu servieren. Eine einfache Sauce kannst du aus saurer Sahne, Knoblauch, Zitronensaft
+            und Dill zubereiten.'
+
 zutaten:
 
  - s: 1/3 Cup Sojasauce
