--- a/_data/gebackenes-huhn.yml
+++ b/_data/gebackenes-huhn.yml
@@ -1,5 +1,56 @@
 portionen: 4
 
+einleitungstext: '    Gebackenes Huhn ist ein einfaches und leckeres Gericht, das schnell zubereitet ist und mit knusprigem Teig und saftigem Fleisch begeistert. Die Zubereitung ist einfach und erfordert nur wenige Zutaten, die in den meisten Küchen zu
+    finden sind. Das Huhn wird in einer Mischung aus Mehl, Maizena, Milch, Backpulver und Öl gewendet und im heißen Öl frittiert, bis es knusprig und goldbraun ist.<br />
+    <br />
+
+    Dieses Gericht ist vielseitig und kann nach Belieben angepasst werden. Es kann mit verschiedenen Gewürzen und Soßen zubereitet werden, um den Geschmack zu variieren. Außerdem kann es mit Reis oder Nudeln serviert werden, um eine
+    vollständige Mahlzeit zu kreieren.'
+zutatentext: '            Gebackenes Huhn, auch als knuspriges Huhn bekannt, ist ein beliebtes Gericht in vielen Küchen weltweit. Um dieses köstliche Gericht zuzubereiten, benötigt man eine Handvoll einfacher Zutaten, die in jeder gut sortierten Küche zu
+            finden sind.<br />
+            <br />
+
+            Das wichtigste Element sind natürlich die Hühnerschnitzel. Diese können je nach persönlicher Vorliebe in der Menge variieren, aber in der Regel werden etwa 5-6 Stücke benötigt. Das Huhn wird mit Salz und Pfeffer gewürzt und mit
+            Sojasauce bestrichen, bevor es in den Teig getaucht wird.<br />
+            <br />
+
+            Der Teig besteht aus einer Kombination von Mehl, Maizena, Backpulver, Milch und Öl. Diese Zutaten werden gründlich vermischt, um einen glatten Teig zu erhalten, der das Hühnchen perfekt umhüllt und ihm seine knusprige Textur
+            verleiht. Mit diesen einfachen Zutaten kann man das gebackene Huhn schnell und einfach zu Hause zubereiten.'
+variationentext: '            Hier sind einige Variationen, die du ausprobieren kannst, um das gebackene Huhn zu variieren:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Gewürztes Mehl: Füge dem Mehl-Teig eine Prise deiner Lieblingsgewürze hinzu, wie zum Beispiel Paprikapulver, Knoblauchpulver oder Cayennepfeffer, um dem Hühnchen einen zusätzlichen Kick
+            zu verleihen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Paniertes Huhn: Für eine extra knusprige Textur, kannst du das Hühnerfleisch nach dem Eintauchen im Teig in einer Mischung aus Panko-Brotkrumen und Gewürzen wälzen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Süße Variante: Wenn du etwas Süßes möchtest, kannst du dem Teig ein wenig Zucker oder Honig hinzufügen und das gebackene Huhn mit einer süßen Chilisauce servieren.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Asiatische Gewürze: Für einen asiatischen Geschmack, füge dem Teig eine Prise von Gewürzen wie Kurkuma, Ingwer oder Koriander hinzu. Auch frische Kräuter wie Thymian oder Rosmarin
+            können dem Teig eine besondere Note verleihen. Serviere es mit einem Dip aus Sojasauce und Limetten- oder Zitronensaft.<br />
+            <br />
+
+            Probiere diese Variationen aus, um dein gebackenes Huhn aufzupeppen und neue Geschmacksrichtungen zu entdecken!'
+serviervorschlaegetext: '            Für das gebackene Huhn gibt es verschiedene Serviervorschläge, die das Gericht noch schmackhafter machen können.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine beliebte Variante ist es, das Huhn mit Reis oder Asia-Nudeln zu servieren, um eine vollständige Mahlzeit zu erhalten. Dazu kann man das Huhn in kleine Streifen schneiden und mit
+            etwas Sauce übergießen, um den Geschmack noch zu verstärken.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Wer es gerne etwas frischer mag, kann auch ein paar Salatblätter und Gurkenscheiben als Beilage hinzufügen. So bekommt das Gericht eine knackige und frische Note.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine weitere Möglichkeit ist es, das Huhn als Fingerfood zu servieren und in kleine Stücke zu schneiden. Dazu kann man eine würzige Dip-Sauce reichen, um das Gericht noch abzurunden.
+            <br />
+            <br />
+
+            Ob als Hauptgericht oder als Fingerfood bei einem gemütlichen Abend mit Freunden - das gebackene Huhn ist ein wahrer Genuss. Mit ein paar kreativen Serviervorschlägen kann man das Gericht noch abwechslungsreicher gestalten und
+            immer wieder neu interpretieren.'
+
 zutaten:
  - s: 5-6 Hühnerschnitzel
  - s: 120g Mehl
