--- a/_data/knuspriges-brot.yml
+++ b/_data/knuspriges-brot.yml
@@ -3,6 +3,35 @@ zeitaufwandvorbereitung: 20 Stunden, 10 Minuten
 zeitaufwandzubereitung: 40 Minuten
 gesamtzeitaufwand: 20 Stunden, 50 Minuten
 
+einleitungstext: '    Brot ist ein Grundnahrungsmittel, das seit Jahrtausenden von Menschen auf der ganzen Welt genossen wird. Es gibt viele verschiedene Arten von Brot, aber eine besonders beliebte Variante ist das knusprige Brot. In diesem Rezept wird
+    gezeigt, wie man ein köstliches knuspriges Brot ohne Kneten zubereiten kann, das perfekt zu jeder Mahlzeit passt.<br />
+    <br />
+
+    Das Rezept benötigt nur wenige Zutaten und ist einfach zuzubereiten, auch wenn es etwas Zeit in Anspruch nimmt. Der Teig wird aus Weizen- und Roggenmehl hergestellt und mit Salz und Trockenhefe vermischt. Nach einer langen Ruhezeit von
+    18 Stunden wird der Teig nochmals gefaltet und weitere 2 Stunden gehen gelassen, bevor er in den Ofen gegeben wird.<br />
+    <br />
+
+    Das Ergebnis ist ein köstliches, knuspriges Brot mit einer goldbraunen Kruste und einer weichen, luftigen Krume. Es kann als Beilage zu einer Suppe oder einem Salat serviert werden oder einfach mit Butter und Marmelade zum Frühstück
+    genossen werden. Wenn Sie auf der Suche nach einem einfachen und leckeren Brotrezept sind, sollten Sie dieses knusprige Brot ohne Kneten ausprobieren.'
+zutatentext: '            In der Küche sind die Zutaten der Grundbaustein jedes Rezepts. Sie sind verantwortlich für den Geschmack, die Textur und die Nährstoffe, die in unseren Mahlzeiten enthalten sind. Bei der Zubereitung von Speisen ist es wichtig,
+            qualitativ hochwertige Zutaten zu verwenden, um das beste Ergebnis zu erzielen.<br />
+            <br />
+
+            Das Rezept für das knusprige Brot ohne Kneten erfordert nur wenige Zutaten, aber sie spielen eine entscheidende Rolle in der Herstellung des perfekten Brotes. Das Rezept verwendet Weizen- und Roggenmehl, um eine ausgewogene
+            Mischung aus Geschmack und Textur zu erreichen. Weizenmehl ist aufgrund seines hohen Proteingehalts und Glutenanteils ideal für die Herstellung von Brotteig geeignet. Roggenmehl verleiht dem Brot einen rustikalen Geschmack und
+            eine dunkle Farbe.<br />
+            <br />
+
+            Das Salz ist ein weiterer wichtiger Bestandteil des Rezepts. Es gibt dem Brot nicht nur den notwendigen Geschmack, sondern ist auch für die Regulierung des Gärprozesses im Teig verantwortlich. Die Trockenhefe ist ein weiteres
+            wesentliches Element, das dem Teig erlaubt, aufzugehen und ein luftiges und leichtes Brot zu produzieren.<br />
+            <br />
+
+            Zuletzt wird das Brot mit Wasser angefeuchtet, um eine feuchte Krume und eine knusprige Kruste zu erzeugen.<br />
+            <br />
+
+            Insgesamt sind die Zutaten des knusprigen Brotes ohne Kneten einfach, aber entscheidend für die Herstellung eines köstlichen Brotes. Durch die Verwendung von qualitativ hochwertigen Zutaten kann man ein Brot herstellen, das
+            nicht nur gut schmeckt, sondern auch nährstoffreich ist.'
+
 zutaten:
  - s: 335g Weizenmehl, Typ 700
  - s: 100g Roggenmehl (Vollkorn)
