--- a/_data/pizzasauce.yml
+++ b/_data/pizzasauce.yml
@@ -2,6 +2,32 @@ portionen: 6
 gesamtzeitaufwand: 1-2 Minuten
 zeitaufwandzubereitung: 1-2 Minuten
 
+einleitungstext: 'Die Pizzasauce ist eine wesentliche Zutat bei der Zubereitung von Pizza. Sie ist das Geheimnis eines guten Pizzageschmacks und kann die gesamte Erfahrung beeinflussen. Eine hausgemachte Pizzasauce ist einfach zu machen und schmeckt um
+    einiges besser als jede im Supermarkt erhältliche Sauce. Dieses Rezept für Pizzasauce ist einfach und schnell zuzubereiten und verwendet nur wenige Zutaten, die Sie wahrscheinlich bereits in Ihrer Küche haben.<br />
+    <br />
+
+    Die Basis dieser Pizzasauce sind geschälte Tomaten und Tomatenmark, die mit Zwiebeln, Knoblauch und italienischen Kräutern verfeinert werden. Ein Teelöffel Zucker und ein Teelöffel Salz sorgen dafür, dass die Sauce eine perfekte Balance
+    zwischen süß und salzig hat. Die Verwendung von frischen Zutaten sorgt dafür, dass die Sauce reich an Geschmack ist und ohne Konservierungsstoffe auskommt.<br />
+    <br />
+
+    Sobald alle Zutaten gemischt sind, können Sie die Sauce mit einem Mixer oder Pürierstab zerkleinern, um eine glatte und gleichmäßige Konsistenz zu erhalten. Diese Pizzasauce ist perfekt als Basis für jede Art von Pizza und kann auch als
+    Dip für Brot oder Gemüse verwendet werden. Probieren Sie es aus und experimentieren Sie mit verschiedenen Kräutern und Gewürzen, um die perfekte Pizzasauce zu kreieren, die genau Ihrem Geschmack entspricht.'
+zutatentext: '            Die Zutaten sind das Herzstück jedes Rezepts und beeinflussen maßgeblich den Geschmack und die Qualität des Gerichts. Bei der Zubereitung von Pizzasauce sind frische und qualitativ hochwertige Zutaten von größter Bedeutung, um
+            ein schmackhaftes Ergebnis zu erzielen. In diesem Artikel werfen wir einen Blick auf die Zutaten, die für eine perfekte Pizzasauce benötigt werden.<br />
+            <br />
+
+            Die Basis der Pizzasauce bilden geschälte Tomaten und Tomatenmark. Beide Zutaten sollten von hoher Qualität sein und aus reifen Tomaten hergestellt werden. Wenn Sie die Möglichkeit haben, können Sie auch frische Tomaten
+            verwenden, die geschält und entkernt werden müssen. Frische Tomaten können der Sauce einen noch intensiveren Geschmack verleihen.<br />
+            <br />
+
+            Zwiebeln und Knoblauch sind unverzichtbare Zutaten, die der Sauce eine reichhaltige und herzhafte Note verleihen. Es ist wichtig, Zwiebeln und Knoblauch fein zu hacken oder zu zerkleinern, um sicherzustellen, dass sie gut mit
+            den anderen Zutaten vermischt werden. Sie können auch andere aromatische Zutaten wie Paprika, Chili oder Basilikum hinzufügen, um der Sauce eine individuelle Note zu verleihen.<br />
+            <br />
+
+            Schließlich benötigt die Pizzasauce noch Gewürze und Aromen, um ihr den typischen Pizzageschmack zu verleihen. Italienische Kräuter wie Oregano, Basilikum und Thymian sind in der Regel eine gute Wahl, aber Sie können auch andere
+            Gewürze wie Paprikapulver oder Chiliflocken hinzufügen, um der Sauce mehr Würze zu geben. Ein Teelöffel Zucker und ein Teelöffel Salz sind in der Regel ausreichend, um der Sauce eine ausgewogene Geschmacksnote zu verleihen. Mit
+            diesen Zutaten und einem guten Rezept können Sie eine köstliche Pizzasauce zubereiten, die perfekt zu Ihrer Lieblingspizza passt.'
+
 zutaten:
  - s: 1 Dose (420g) Geschälte Tomaten
  - s: 170g Tomatenmark
