--- a/_data/red-thai-curry.yml
+++ b/_data/red-thai-curry.yml
@@ -2,6 +2,73 @@ portionen: 4
 zeitaufwandzubereitung: 35 Minuten
 gesamtzeitaufwand: 35 Minuten
 
+einleitungstext: '    Red Thai Curry ist ein köstliches und einfaches Gericht, das aus der thailändischen Küche stammt und sich inzwischen weltweit großer Beliebtheit erfreut. Dieses Curry ist ein wunderbares Beispiel für die einzigartige Kombination von
+    würzigen, süßen und sauren Aromen, die in der thailändischen Küche typisch sind. Es ist ein vielseitiges Gericht, das sich perfekt für den Familienabend oder das gemeinsame Essen mit Freunden eignet.<br />
+    <br />
+
+    Das Rezept für Red Thai Curry ist einfach zu folgen und erfordert nur wenige Zutaten, die leicht zu bekommen sind. Es ist eine großartige Möglichkeit, eine Vielzahl von Gemüsesorten und Proteinen in eine köstliche Mahlzeit zu
+    integrieren. Das Hühnerfleisch wird zusammen mit frischem Gemüse wie Paprika, Karotten und Zuckerschoten in einer reichhaltigen Kokosmilchsoße gekocht, die mit roter Currypaste gewürzt ist.<br />
+    <br />
+
+    Dieses Gericht kann auf verschiedene Weise angepasst werden, um den individuellen Geschmack und die Präferenzen anzupassen. Die Schärfe des Gerichts kann durch die Zugabe von mehr oder weniger Currypaste kontrolliert werden, während die
+    Auswahl des Gemüses je nach Verfügbarkeit oder persönlicher Vorliebe variiert werden kann. Servieren Sie Red Thai Curry mit Reis oder Nudeln für eine vollständige Mahlzeit, die sowohl sättigend als auch lecker ist.'
+zutatentext: '            Die Zutaten sind das Herzstück eines jeden Rezepts und bestimmen maßgeblich den Geschmack und die Qualität der Mahlzeit. Im Falle von Red Thai Curry sind die Zutaten sorgfältig ausgewählt, um das einzigartige Aroma und den
+            Geschmack zu kreieren, für den dieses Gericht bekannt ist.<br />
+            <br />
+
+            Das Hühnerfleisch bildet die Grundlage für das Curry und sorgt für eine gute Proteinquelle. Es wird in mundgerechte Stücke geschnitten und in der Kokosmilchsoße gekocht, um es zart und saftig zu halten. Das Gemüse in diesem
+            Rezept - Paprika, Karotte und Zuckerschoten - fügt dem Gericht eine knusprige Textur und einen frischen Geschmack hinzu.<br />
+            <br />
+
+            Die rote Currypaste ist das wichtigste Gewürz in diesem Rezept und gibt dem Gericht seine charakteristische Würze. Es ist eine Mischung aus verschiedenen Gewürzen wie Chili, Knoblauch und Ingwer, die in einer Pasta aus roten
+            Chilis verarbeitet werden. Die Currypaste kann in vielen Geschäften und Online-Shops gefunden werden und ist in verschiedenen Schärfegraden erhältlich.<br />
+            <br />
+
+            Die Kokosmilchsoße bildet die Grundlage für das Curry und sorgt für eine cremige Textur und einen milden Geschmack. Die Kokosmilch wird aus dem Fleisch reifer Kokosnüsse gewonnen und verleiht dem Gericht auch eine gewisse Süße.
+            Es ist wichtig, eine hochwertige Kokosmilch zu wählen, um sicherzustellen, dass das Gericht einen vollen und cremigen Geschmack hat.'
+variationentext: '            Eine der großartigen Eigenschaften von Red Thai Curry ist seine Vielseitigkeit. Das Grundrezept lässt sich leicht anpassen und durch verschiedene Zutaten ergänzen oder ersetzen, um ein ganz neues Gericht zu kreieren.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Vegetarische Option: Wenn Sie kein Fleisch essen, können Sie das Hühnerfleisch einfach durch Tofu oder Seitan ersetzen. Dies gibt dem Curry eine neue Textur und kann auch dazu
+            beitragen, den Geschmack zu mildern.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Verschiedene Gemüsesorten: Statt der im Grundrezept verwendeten Gemüsesorten können Sie auch andere Gemüsesorten wie Brokkoli, Blumenkohl, Bohnen oder Auberginen verwenden. Es ist
+            ratsam, Gemüsesorten mit ähnlichen Garzeiten auszuwählen, um sicherzustellen, dass sie gleichzeitig gekocht werden können.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Schärfegrad anpassen: Wenn Sie es schärfer mögen, können Sie mehr rote Currypaste hinzufügen oder scharfe Paprika wie Jalapeños oder Thai-Chilis verwenden. Wenn Sie es milder mögen,
+            können Sie stattdessen grüne Currypaste verwenden oder weniger rote Currypaste hinzufügen.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Fleischalternativen: Wenn Sie keine Lust auf Hühnchen haben, können Sie stattdessen auch Garnelen, Rindfleisch oder Schweinefleisch verwenden. Beachten Sie dabei jedoch die
+            unterschiedlichen Garzeiten und passen Sie die Kochzeit entsprechend an.<br />
+            <br />
+
+            Die Möglichkeiten, das Grundrezept von Red Thai Curry zu variieren, sind nahezu unbegrenzt. Lassen Sie Ihrer Kreativität freien Lauf und kreieren Sie Ihre ganz persönliche Variante dieses beliebten Gerichts.'
+serviervorschlaegetext: '            Red Thai Curry ist ein Gericht, das wunderbar zu Reis oder Nudeln passt und auch mit verschiedenen Beilagen kombiniert werden kann. Hier sind einige Serviervorschläge, um das Curry noch schmackhafter zu machen:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Reis: Servieren Sie das Curry mit Jasminreis oder Basmatireis. Der leicht süße und blumige Geschmack des Reises passt perfekt zum scharfen Curry.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Nudeln: Probieren Sie das Curry auch einmal mit Reisnudeln oder Udon-Nudeln. Diese absorbieren die Sauce und verleihen dem Gericht eine andere Textur.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Frische Kräuter: Geben Sie dem Curry mit frischen Kräutern wie Koriander oder Thai-Basilikum eine zusätzliche Dimension. Die frischen Aromen passen wunderbar zum Geschmack des Currys.
+            <br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Limetten: Servieren Sie das Curry mit einigen Scheiben Limette. Der saure Geschmack des Limettensafts verleiht dem Gericht eine erfrischende Note und harmoniert gut mit dem würzigen
+            Curry.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Knusprige Toppings: Für eine knusprige Textur können Sie das Curry mit gerösteten Erdnüssen oder Cashewnüssen bestreuen. Auch frittierte Zwiebeln oder Knoblauchchips passen gut zu dem
+            Gericht.<br />
+            <br />
+
+            Mit diesen Serviervorschlägen können Sie das Red Thai Curry noch schmackhafter machen und es zu einem Highlight auf Ihrem Esstisch machen.'
+
 zutaten:
  - s: 500g Hühnerfleisch
  - s: 2 Paprikaschoten (bzw. insgesamt 280-300g Paprikastreifen)
