--- a/_data/wiener-saftgulasch.yml
+++ b/_data/wiener-saftgulasch.yml
@@ -3,6 +3,58 @@ zeitaufwandvorbereitung: 20 Minuten
 zeitaufwandzubereitung: 2 Stunden, 45 Minuten
 gesamtzeitaufwand: 3 Stunden, 5 Minuten
 
+einleitungstext: '    Wiener Saftgulasch ist ein klassisches Gericht der österreichischen Küche, das aus zartem Gulaschfleisch und würzigen Zutaten besteht. Es ist eine herzhafte und wohlschmeckende Mahlzeit, die ideal für kalte Tage ist. Der Name
+    "Saftgulasch" kommt von der saftigen Konsistenz des Gerichts, die durch die langsame Zubereitung und das Hinzufügen von verschiedenen Gewürzen erreicht wird.<br />
+    <br />
+
+    Die Zutatenliste für das Wiener Saftgulasch ist überschaubar und einfach zu beschaffen. Das Hauptbestandteil ist das Gulaschfleisch, das in der Regel aus Rindfleisch besteht. Zusammen mit den Zwiebeln, Knoblauch, Lorbeerblättern und
+    Gewürzen entsteht ein wunderbar aromatischer Geschmack. Das Gericht wird durch das Hinzufügen von Rotwein und Rindsuppenwürfeln verfeinert und bekommt so eine angenehme Würze und Tiefe.<br />
+    <br />
+
+    Die Zubereitung des Wiener Saftgulaschs erfordert etwas Zeit und Geduld, aber es lohnt sich. Das Fleisch wird langsam gekocht, bis es zart und saftig ist. Das Ergebnis ist ein köstliches Gericht, das sich perfekt für ein gemütliches
+    Abendessen mit Familie oder Freunden eignet. Probieren Sie es aus und lassen Sie sich von den köstlichen Aromen der österreichischen Küche verführen!'
+zutatentext: '            Das Wiener Saftgulasch ist ein klassisches Gericht der österreichischen Küche und zeichnet sich durch seine reichhaltigen und herzhaften Zutaten aus. Das Hauptbestandteil ist das Gulaschfleisch, das aus Rind oder Kalb gewonnen
+            wird und von zarten Fett- und Fleischschichten durchzogen ist. Aber auch die Zwiebeln spielen eine entscheidende Rolle und verleihen dem Gericht ihre charakteristische Süße und Geschmack.<br />
+            <br />
+
+            Neben den Grundzutaten sind es vor allem die Gewürze, die dem Wiener Saftgulasch sein einzigartiges Aroma verleihen. Dazu gehören der Kümmel, der das Fleisch besonders bekömmlich macht, der Majoran, der ihm eine würzige Note
+            verleiht, sowie das Paprikapulver, das für die charakteristische Farbe sorgt. Lorbeerblätter und Knoblauch runden das Geschmacksprofil ab und verleihen dem Gericht eine angenehme Würze.<br />
+            <br />
+
+            Um die Intensität und den Geschmack des Saftgulaschs zu verstärken, werden auch Rotwein und Weißweinessig verwendet. Diese verleihen dem Gericht nicht nur eine feine Säure, sondern auch einen raffinierten Geschmack.
+            Rindsuppenwürfel und Salz geben dem Saftgulasch die nötige Würze und sorgen für einen intensiven Geschmack, der die Sinne verwöhnt. Insgesamt sind es die Kombination und der Einsatz der Zutaten, die das Wiener Saftgulasch zu
+            einem besonderen Genuss machen.'
+variationentext: '            Es gibt unzählige Variationen des Wiener Saftgulaschs, die je nach Geschmack und Region variieren können. Einige köstliche Variationen beinhalten die Zugabe von verschiedenen Gemüsen wie Paprika, Karotten oder Kartoffeln, um dem
+            Gulasch mehr Textur und Geschmack zu verleihen.<br />
+            <br />
+
+            Eine weitere Variante des Wiener Saftgulaschs ist die Verwendung von anderen Fleischsorten wie Lamm oder Schwein anstelle von Rindfleisch. Auch die Zugabe von verschiedenen Gewürzen wie Kreuzkümmel, Chili oder Ingwer kann das
+            Gulasch aufpeppen und ihm eine neue Geschmacksrichtung verleihen.<br />
+            <br />
+
+            Darüber hinaus kann das Wiener Saftgulasch auch in verschiedenen Varianten serviert werden, wie zum Beispiel mit Spätzle, Knödeln oder Brot. Es kann auch mit Sauerrahm oder frischem Petersilie garniert werden, um ihm zusätzliche
+            Aromen und Texturen zu verleihen. Die Möglichkeiten sind endlos und können an die individuellen Vorlieben und Geschmäcker angepasst werden.'
+serviervorschlaegetext: '            Hier sind einige Serviervorschläge für dein Wiener Saftgulasch:<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Klassisch mit Semmelknödel oder Salzkartoffeln servieren. Dazu passt ein frischer grüner Salat als Beilage.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Für eine herzhafte Variante kannst du das Gulasch auch mit Nudeln servieren, beispielsweise mit breiten Bandnudeln oder Spätzle.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Eine weitere Option wäre, das Gulasch in einem Brot zu servieren. Dazu einfach ein Ciabatta oder Baguette aushöhlen und mit dem Gulasch füllen. Dazu passt ein frischer Salat als
+            Beilage.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Für eine etwas würzigere Note kannst du das Gulasch mit gerösteten Kartoffeln und Karotten servieren.<br />
+            <br />
+
+            <i class="fa-regular fa-circle-check"></i> Wenn du es gerne scharf magst, kannst du das Gulasch mit einer Prise Chilipulver oder Cayennepfeffer würzen. Dazu passt Reis als Beilage.<br />
+            <br />
+
+            Egal welche Variante du wählst, das Wiener Saftgulasch ist ein perfektes Gericht für kalte Tage und lässt sich auch wunderbar am nächsten Tag aufwärmen und genießen.'
+
 zutaten:
  - s: 1kg Gulaschfleisch
  - s: 800g Zwiebeln
